--- a/views/reversed.erb
+++ b/views/reversed.erb
@@ -9,7 +9,8 @@
   <body>
     <h1>The Ultimate Reversed String!</h1>
 
-    <!--   Use ERB tags to bring in an instance variable containing the reversed string -->
+    <%str = params[:string].reverse%>
+    <p><%= str %></p>
 
   </body>
 </html>
